Updates to stud pg content

--- a/stud.html
+++ b/stud.html
@@ -49,55 +49,20 @@
             <div class="container grid">
                 <div>
                     <h1 class="xl">La Bear's Chocolate Shop</h1>
-                    <p class="lead"> LaBear Frenchies is pleased to offer a lock-in special for our Rojo Chocolate Merle
-                        Stud ROMEO, a homozygous testable chocolate sired by MrGore. He's ready to work now. VERY
-                        limited intro offer - $2,500 stud fee, 1st come 1st served. Contact us now for lock-in options!
-                        Fall '22 ONLY.
+                    <p class="lead"> Get your chocolates here. La Bear Frenchies now has three chocolate-colored, AKC
+                        registered Studs. Romeo, out of Mr GORE, carries double testable choloate with one cocoa and can
+                        produce both rojo and new shade rojo pups. Our boy Ferrero just turned 7 months, and is a l4
+                        fluffy carrier with some visible longer hafir. JerBear, our quad carrier lilac-n-tan with double intensity (ii).
                     </p>
                 </div>
                 <div class="card">
-                    <img src="images/Stud/romeoStudCard.jpg" alt="lilac and tan double cocoa french bulldog">
-                </div>
-                <div class="card">
-                    <img src="images/Stud/romeo-3.jpg" alt="lilac and tan double cocoa french bulldog">
-                </div>
-                <div class="card">
-                    <img src="images/Stud/romeo-4.jpg" alt="lilac and tan double cocoa french bulldog">
+                    <img src="images/Stud/romeo-2-2.jpg" alt="rojo chocolate merle french bulldog">
                 </div>
             </div>
         </section>
 
         <section class="docs-main bg-my-4">
-            <div class="container grid">
 
-                <div class="card bg-light p-3">
-
-                    <h3 class="my-2">Jer Beau Bear</h3>
-                    <nav>
-                        <ul>
-                            <li><a class="text-primary" href="#">Lilac with fully-suited Tan points, tri-color</a></li>
-                            <li><a href="#">Double recessive Cocoa (coco)</a></li>
-                            <li><a href="#">Double recesive Dilution (dd) and Intensity (ii)</a></li>
-                            <li><a href="#">Sired by Neuburo Nitro, Owner Ashleigh Brookes</a></li>
-                        </ul>
-                    </nav>
-
-                    <h3 class="my-2">Stud Fee</h3>
-                    <nav>
-                        <ul>
-                            <li><a href="#">$2500</a></li>
-                        </ul>
-                    </nav>
-
-                </div>
-
-                <div class="card">
-                    <h2>Jer Beau Bear</h2>
-                    <img src="images/Stud/Jerbear-1.jpg" alt="lilac and tan french bulldog">
-                    <img src="images/Stud/Jerbear-2.jpg" alt="lilac and tan french bulldog">
-
-                </div>
-            </div>
             <div class="container grid">
 
                 <div class="card bg-light p-3">
@@ -116,7 +81,7 @@
                     <h3 class="my-2">Stud Fee</h3>
                     <nav>
                         <ul>
-                            <li><a href="#">$5000</a></li>
+                            <li><a href="#">please inquire</a></li>
                         </ul>
                     </nav>
 
@@ -124,9 +89,10 @@
 
                 <div class="card">
                     <h2>LaBear's Romeo Rojo</h2>
-                    <h3>Limited Breeding Only; next open on July 24th, 2022</h3>
+                    <h3>Limited Breeding Only</h3>
+
+                    <img src="images/Stud/romeo-2-2.jpg" alt="rojo chocolate merle french bulldog">
                     <img src="images/Stud/romeoStudCard.jpg" alt="rojo chocolate merle french bulldog">
-                    <img src="images/Stud/Romeo-2.jpg" alt="rojo chocolate merle french bulldog">
                     <img src="images/Stud/Romeo.jpg" alt="rojo chocolate merle french bulldog">
 
                 </div>
@@ -138,7 +104,7 @@
                     <h3 class="my-2">LaBear's Belgian Chocolate</h3>
                     <nav>
                         <ul>
-                            <li><a class="text-primary" href="#">Visual Fluffy, Carries one L4</a></li>
+                            <li><a class="text-primary" href="#">Fluffy, Carries one L4</a></li>
                             <li><a href="#">Double recessive Cocoa (coco) </a></li>
                             <li><a href="#">Carries Testable Chocoloate (Bb) </a></li>
                             <li><a href="#">Four Panel Clear</a></li>
@@ -148,7 +114,7 @@
                     <h3 class="my-2">Stud Fee</h3>
                     <nav>
                         <ul>
-                            <li><a href="#">inquire for price</a></li>
+                            <li><a href="#">please inquire</a></li>
                         </ul>
                     </nav>
 
@@ -156,12 +122,43 @@
 
                 <div class="card">
                     <h2>LaBear's Belgian Chocolate</h2>
-                    <h3>Will begin very limited breeding in October, 2022</h3>
-                    <img src="images/Stud/Ferr-1.jpg" alt="chocolate fluffy french bulldog">
-                    <img src="images/Stud/Ferr-2.jpg" alt="chocolate fluffy french bulldog">
+                    <h3>now open for breeding</h3>
+                    <img src="images/Stud/ferrero-5.jpg" alt="chocolate fluffy french bulldog">
                     <img src="images/Stud/Ferrero-3.jpg" alt="chocolate fluffy french bulldog">
                     <img src="images/Stud/Ferr-3.jpg" alt="chocolate fluffy french bulldog">
-                   
+
+                </div>
+            </div>
+            <div class="container grid">
+
+                <div class="card bg-light p-3">
+
+                    <h3 class="my-2">Jer Beau Bear</h3>
+                    <nav>
+                        <ul>
+                            <li><a class="text-primary" href="#">Lilac with fully-suited Tan points, Quad Carrier</a>
+                            </li>
+                            <li><a href="#">Double recessive Cocoa (coco)</a></li>
+                            <li><a href="#">Double recesive Dilution (dd) and Intensity (ii)</a></li>
+                            <li><a href="#">Sired by Neuburo Nitro, Owner Ashleigh Brookes</a></li>
+                        </ul>
+                    </nav>
+
+                    <h3 class="my-2">Stud Fee</h3>
+                    <nav>
+                        <ul>
+                            <li><a href="#">please inquire</a></li>
+                        </ul>
+                    </nav>
+
+                </div>
+
+                <div class="card">
+                    <h2>Jer Beau Bear</h2>
+                    <img src="images/Stud/Jerbear-4.jpg" alt="lilac and tan french bulldog">
+                    <img src="images/Stud/Jerbear-1.jpg" alt="lilac and tan french bulldog">
+                    <img src="images/Stud/Jerbear-2.jpg" alt="lilac and tan french bulldog">
+
                 </div>
             </div>
         </section>
