Add about page gifs content

--- a/about.html
+++ b/about.html
@@ -15,85 +15,155 @@
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-2TG5FJKHNB"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-2TG5FJKHNB');
+    gtag('config', 'G-2TG5FJKHNB');
 </script>
+
 <body>
- <!-- NAVBAR -->
- <div class="navbar">
-    <!-- logo and nav buttons, but wrapped in a container to refine spatial control of edges on larger screens -->
-    <div class="container flex">
+    <!-- NAVBAR -->
+    <div class="navbar">
+        <!-- logo and nav buttons, but wrapped in a container to refine spatial control of edges on larger screens -->
+        <div class="container flex">
 
-        <h1 class="logo">La Bear <span style="font-size:12px; font-family:lato;">FRENCHIES</span></h1>
-        <img class="my-1" src="images/logos/Gold&MagentaLilac.png" alt="frenchie logo">
-        <nav>
-            <ul class="push">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="puppies.html">Puppies</a></li>
-                <li><a href="stud.html">Stud</a></li>
-                <li><a href="about.html">About</a></li>
-            </ul>
-        </nav>
-    </div>
-
-</div>
-<h2 class="contact">email: LaBearFrenchies<i class="fas fa-at"></i>gmail.com | text: 214.861.7611</h3>
-
-    <!-- Head -->
-    <section class="docs-head bg-primary py-3">
-        <div class="container grid">
-            <div>
-                <h1 class="xl">About La Bear Frenchies</h1>
-                <p class="lead">Stay Tuned - this page coming soon!</p>
-            </div>
-            
+            <h1 class="logo">La Bear <span style="font-size:12px; font-family:lato;">FRENCHIES</span></h1>
+            <img class="my-1" src="images/logos/Gold&MagentaLilac.png" alt="frenchie logo">
+            <nav>
+                <ul class="push">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="puppies.html">Puppies</a></li>
+                    <li><a href="stud.html">Stud</a></li>
+                    <li><a href="about.html">About</a></li>
+                </ul>
+            </nav>
         </div>
-    </section>
-    <!---Showcase -->
-    <!-- <section class="showcase">
-        <div class="container grid">
-            <div class="showcase-text">
-                <h1>Happy Frenchies Make The Best Frenchies!</h1>
-                <p>We breed fabulous, spoiled-ass French Bulldogs right in our home.
-                    We're obsessed with breeding the most gorgeous, healthy frenchies from top-tier pedigrees with
-                    beautiful 'exotic' coat colors. Located in Dallas, TX, we hand-deliver our puppies across the U.S.A.
+
+    </div>
+    <h2 class="contact">email: LaBearFrenchies<i class="fas fa-at"></i>gmail.com | text: 214.861.7611</h3>
+
+        <!-- Head -->
+        <section class="docs-head bg-primary py-3">
+            <div class="container grid">
+                <div>
+                    <h1 class="xl">About La Bear Frenchies</h1>
+                    <p class="lead">The health and well-being of our dogs is our number one priority.</p>
+                </div>
+
+            </div>
+        </section>
+        <!---Showcase -->
+        <section class="showcase">
+            <div class="container grid">
+                <div class="showcase-text">
+                    <h1>Happy Frenchies Make The Best Frenchies!</h1>
+                    <p>We are home-based breeders of beautiful, happy, and healthy French Bulldogs. We aim to breed good
+                        natured French Bulldogs with great structure and type. Our Frenchie pups come in a variety of
+                        colors such as
+                        blue, chocolate, lilac, in some with a long coat (fluffy). Located in Dallas,TX, we hand-deliver
+                        our puppies across the U.S.A. All of our French Bulldogs are health-tested and have amazing
+                        temperaments. Our puppies
+                        are raised loving family environment (right in our living room), with plenty of interaction and
+                        socialising from day 1 so
+                        they are ‘home ready’ for their forever families. We are located on acreage just South of
+                        Dallas, where our Frenchies have ample room to run around and play.
+                    </p>
+                </div>
+
+                <div class="showcase-form card">
+                    <img src="images/pool.JPG" alt="">
+
+                </div>
+            </div>
+        </section>
+
+        <section class="features  bg-light py-3">
+            <div class="container p-5">
+                <h1 class="xl">Life at La Bear Frenchies</h1>
+                <p class="lead">
                 </p>
-                <a href="puppies.html" class="btn btn-complementary">Frenchie Me</a>
+            </div>
+            <div class="container grid">
+                <div class="card puppy">
+                    <div style="width:100%;height:0;padding-bottom:99%;position:relative;"><iframe
+                            src="https://giphy.com/embed/NRwJ17ZqEuY5Sq7XoF" width="100%" height="100%"
+                            style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+                    </div>
+                    <p><a
+                            href="https://giphy.com/gifs/frenchie-french-bulldog-puppy-labearfrenchies-NRwJ17ZqEuY5Sq7XoF">via
+                            GIPHY</a></p>
+                </div>
+                <div class="card puppy">
+                    <div style="width:100%;height:0;padding-bottom:178%;position:relative;"><iframe
+                            src="https://giphy.com/embed/U4trRCAPfqwddf3fGi" width="100%" height="100%"
+                            style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+                    </div>
+                    <p><a href="https://giphy.com/gifs/french-bulldog-labearfrenchies-puppies-U4trRCAPfqwddf3fGi">via
+                            GIPHY</a></p>
+                </div>
+                <div class="card puppy">
+                    <div style="width:100%;height:0;padding-bottom:124%;position:relative;"><iframe
+                            src="https://giphy.com/embed/hBfE9dTY62OO2aYGyU" width="100%" height="100%"
+                            style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+                    </div>
+                    <p><a
+                            href="https://giphy.com/gifs/french-bulldog-labearfrenchies-waterhouse-attack-hBfE9dTY62OO2aYGyU">via
+                            GIPHY</a></p>
+                </div>
+                <div class="card puppy">
+                    <div style="width:100%;height:0;padding-bottom:55%;position:relative;"><iframe
+                            src="https://giphy.com/embed/Gs06y8tCQFxGjx8xuI" width="100%" height="100%"
+                            style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+                    </div>
+                    <p><a href="https://giphy.com/gifs/fetch-labearfrenchies-frenchies-at-play-Gs06y8tCQFxGjx8xuI">via
+                            GIPHY</a></p>
+                </div>
+                <div class="card puppy">
+                    <div style="width:100%;height:0;padding-bottom:178%;position:relative;"><iframe src="https://giphy.com/embed/Nn3oODdRHzbfkNAgcs" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/french-bulldog-labearfrenchies-rojo-merle-Nn3oODdRHzbfkNAgcs">via GIPHY</a></p>
+                </div>
             </div>
 
-            <div class="showcase-form card">
-                <img src="images/pool.JPG" alt="">
-
             </div>
-        </div>
-    </section> -->
 
-    
+        </section>
+        <!-- second puppy section -->
+        <!-- <section class="cloud bg-primary py-2">
+            <div class="container grid">
+                <div class="text-center">
+                    <h2 class="lg">Two Fluffy Carrier Merle Boys Available</h2>
+                    <p class="lead my-1"> </p>
+                </div>
 
-<!-- footer -->
-<footer class="footer bg-light py-5">
-    <div class="container grid grid-3">
-        <div>
-            <img src="images/logos/frenchiesmall.png" alt="frenchie logo">
-            <h1 class="lead">La Bear Frenchies</h1>
-            <p class="sm"> Dallas, TX </br> Copyright &copy; 2021</p>
-        </div>
-        <nav>
-            <ul class="md">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="puppies.html">Puppies</a></li>
-                <li><a href="stud.html">Stud</a></li>
-            </ul>
-        </nav>
-        <div class="social">
-            <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
-            <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
-        </div>
-    </div>
-</footer>
+                <img src="images/Luna/lunaboy1.jpg" alt="fluffy-carrier merle">
+                <img src="images/Luna/Lunaboy2.jpg" alt="fluffy-carrier merle">
+                <img src="images/Luna/Luna.jpg" alt="black merle frenchie">
+                <img src="images/Luna/slimshady.jpg" alt="lilac platinum fluffy Carrier">
+            </div>
+        </section> -->
+
+
+        <!-- footer -->
+        <footer class="footer bg-light py-5">
+            <div class="container grid grid-3">
+                <div>
+                    <img src="images/logos/frenchiesmall.png" alt="frenchie logo">
+                    <h1 class="lead">La Bear Frenchies</h1>
+                    <p class="sm"> Dallas, TX </br> Copyright &copy; 2021</p>
+                </div>
+                <nav>
+                    <ul class="md">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="puppies.html">Puppies</a></li>
+                        <li><a href="stud.html">Stud</a></li>
+                    </ul>
+                </nav>
+                <div class="social">
+                    <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+                    <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+                </div>
+            </div>
+        </footer>
 
 
 </html>
