--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <section class="features  bg-light py-3">
         <div class="container p-5">
             <h1 class="xl">CHOCOLATES!</h1>
-            <p class="lead"> On Sept 9th our ZsaZsa LaBear, a dark Chocolate and Tan micro female, had a beautiful litter of different chocolate pups by Texas Frenchie Society's New Shade Isabella Merle Stud, Zeus. Chocolate Fawn, Choclate and Tan, Chocolate Merles and a Lilac -- all with 1 copy testable chocolate and 2 copies cocoa.
+            <p class="lead"> Chocolate puppies are here.
             </p>
         </div>
         <div class="container grid">
