--- a/about.html
+++ b/about.html
@@ -122,6 +122,15 @@
                 <div class="card puppy">
                     <div style="width:100%;height:0;padding-bottom:178%;position:relative;"><iframe src="https://giphy.com/embed/Nn3oODdRHzbfkNAgcs" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/french-bulldog-labearfrenchies-rojo-merle-Nn3oODdRHzbfkNAgcs">via GIPHY</a></p>
                 </div>
+                <div class="card puppy">
+                   <img src="images/about/stick.jpg" alt="">
+                </div>
+                <div class="card puppy">
+                    <img src="images/about/frauelvi.jpg" alt="">
+                 </div>
+                 <div class="card puppy">
+                    <img src="images/about/larrypup.jpg" alt="">
+                 </div>
             </div>
 
             </div>
