Update puppy page

--- a/puppies.html
+++ b/puppies.html
@@ -47,7 +47,7 @@
         <section class="features  bg-primary py-3">
             <div class="container p-5">
                 <h1 class="xl">Puppies Available NOW:</h1>
-                <p class="lead"> Sept 8th: We have girls & boys Available from two litters, both sired by Jer Bear's. Madison's were born Aug 25th and Aurora's Sept 7th.</p>
+                <p class="lead"> Oct 8th: We have 2 girls available from Madison's litter, and boys and girls available from Aurora's litter. Message us for updated info and pictures.</p>
             </div>
             <div class="container grid">
                 <div class="card puppy"><img src="images/mamas/auroramad.jpg" alt="blue fawn and blue pied french bulldog">
