--- a/puppies.html
+++ b/puppies.html
@@ -47,25 +47,41 @@
         <section class="features  bg-primary py-3">
             <div class="container p-5">
                 <h1 class="xl">Puppies Available NOW:</h1>
-                <p class="lead"> Oct 8th: We have 2 girls available from Madison's litter, and boys and girls available from Aurora's litter. Message us for updated info and pictures.</p>
+                <p class="lead"> Oct 12th: We have 2 girls available from Madison's litter, and boys and girls available from Aurora's litter. Message us for updated info and pictures.</p>
             </div>
             <div class="container grid">
-                <div class="card puppy"><img src="images/mamas/auroramad.jpg" alt="blue fawn and blue pied french bulldog">
+                <div class="card puppy"><img src="images/puppies/sum22/blue1.jpg" alt="blue fawn and blue pied french bulldog">
+                    <h1>blue girl 1
+                    </h1>
+                </div>
+                <div class="card puppy"><img src="images/puppies/sum22/blue12.jpg" alt="blue fawn and blue pied french bulldog">
+                    <h1>blue girl 1
+                    </h1>
+                </div>
+                <div class="card puppy"><img src="images/puppies/sum22/blue2.jpeg" alt="blue fawn and blue pied french bulldog">
+                    <h1>blue girl 2
+                    </h1>
+                </div>
+                <div class="card puppy"><img src="images/puppies/sum22/blue22.jpg" alt="blue fawn and blue pied french bulldog">
+                    <h1>blue girl 2
+                    </h1>
                 </div>
                 <div class="card puppy"><img src="images/mamas/madison-2.jpg" alt="blue pied french bulldog">
+                    <h1>Momma</h1>
                 </div>
-                <div class="card puppy"><img src="images/mamas/aurora.jpg" alt="blue fawn french bulldog">
-                </div>
-                <div class="card puppy"><img src="images/puppies/sum22/aurlitter.jpg" alt="litter of french bulldogs">
+                <!-- <div class="card puppy"><img src="images/mamas/aurora.jpg" alt="blue fawn french bulldog">
+                </div> -->
+                <!-- <div class="card puppy"><img src="images/puppies/sum22/aurlitter.jpg" alt="litter of french bulldogs">
                 </div>
                 <div class="card puppy"><img src="images/puppies/sum22/aurlitter1.jpg" alt="litter of french bulldogs">
-                </div>
-                <div class="card puppy"><img src="images/mamas/madison1.jpg" alt="blue pied french bulldog">
-                </div>
+                </div> -->
+                <!-- <div class="card puppy"><img src="images/mamas/madison1.jpg" alt="blue pied french bulldog">
+                </div> -->
                 <div class="card puppy"><img src="images/Jerbear-3.jpg" alt="lilac and tan french bulldog stud">
+                    <h1>Daddy</h1>
                 </div>
-                <div class="card puppy"><img src="images/Stud/Jerbear-1.jpg" alt="lilac and tan french bulldog stud">
-                </div>
+                <!-- <div class="card puppy"><img src="images/Stud/Jerbear-1.jpg" alt="lilac and tan french bulldog stud">
+                </div> -->
                 
             </div>
         </section>
