Embed utube vid to stud pg

--- a/stud.html
+++ b/stud.html
@@ -49,15 +49,19 @@
             <div class="container grid">
                 <div>
                     <h1 class="xl">La Bear's Chocolate Shop</h1>
-                    <p class="lead"> Get your chocolates here. La Bear Frenchies now has three chocolate-colored, AKC
+                    <p>We're thrilled to celebrate Romeo's first trophy from his frist show: Texas Bully Association
+                        Best Chocolate Frenchie!</p>
+                    <!-- <p class="lead"> Get your chocolates here. La Bear Frenchies now has three chocolate-colored, AKC
                         registered Studs. Romeo, out of Mr GORE, carries double testable choloate with one cocoa and can
                         produce both rojo and new shade rojo pups. Our boy Ferrero just turned 7 months, and is a l4
                         fluffy carrier with some visible longer hafir. JerBear, our quad carrier lilac-n-tan with double intensity (ii).
-                    </p>
+                    </p> -->
                 </div>
-                <div class="card">
+                <!-- <div class="card">
                     <img src="images/Stud/romeo-2-2.jpg" alt="rojo chocolate merle french bulldog">
-                </div>
+                </div> -->
+                <iframe class="video" src="https://www.youtube.com/embed/8L1kFcLZsdw" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
             </div>
         </section>
 
