Add fluf merles to pup pg

--- a/puppies.html
+++ b/puppies.html
@@ -47,22 +47,18 @@
         <section class="features  bg-primary py-3">
             <div class="container p-5">
                 <h1 class="xl">Puppies Available NOW:</h1>
-                <p class="lead"> Oct 12th: We have 2 girls available from Madison's litter, and boys and girls available from Aurora's litter. Message us for updated info and pictures.</p>
+                <p class="lead"> Oct 18th: We have only 1 girl available from Madison's litter, and boys and girls available from Aurora's litter. Text us for updated info and pictures.</p>
             </div>
             <div class="container grid">
-                <div class="card puppy"><img src="images/puppies/sum22/blue1.jpg" alt="blue fawn and blue pied french bulldog">
-                    <h1>blue girl 1
-                    </h1>
-                </div>
-                <div class="card puppy"><img src="images/puppies/sum22/blue12.jpg" alt="blue fawn and blue pied french bulldog">
-                    <h1>blue girl 1
-                    </h1>
-                </div>
-                <div class="card puppy"><img src="images/puppies/sum22/blue2.jpeg" alt="blue fawn and blue pied french bulldog">
+                <div class="card puppy"><img src="images/puppies/sum22/blue.jpg" alt="blue french bulldog">
                     <h1>blue girl 2
                     </h1>
                 </div>
-                <div class="card puppy"><img src="images/puppies/sum22/blue22.jpg" alt="blue fawn and blue pied french bulldog">
+                <div class="card puppy"><img src="images/puppies/sum22/blue2.jpeg" alt="blue french bulldog">
+                    <h1>blue girl 2
+                    </h1>
+                </div>
+                <div class="card puppy"><img src="images/puppies/sum22/blue22.jpg" alt="blue french bulldog">
                     <h1>blue girl 2
                     </h1>
                 </div>
@@ -86,19 +82,18 @@
             </div>
         </section>
         <!-- second puppy section -->
-        <!-- <section class="cloud bg-primary py-2">
+        <section class="cloud bg-primary py-2">
             <div class="container grid">
                 <div class="text-center">
-                    <h2 class="lg">Two Fluffy Carrier Merle Boys Available</h2>
-                    <p class="lead my-1"> </p>
+                    <h2 class="lg">Two Merle Boys Available! </h2>
+                    <p class="lead my-1">One boy is a blue merle and one is a fawn merle. Both boys carry cream and a fluffy gene. They are super sweet and we are motivated to find them a forever home.</p>
                 </div>
-
-                <img src="images/Luna/lunaboy1.jpg" alt="fluffy-carrier merle">
-                <img src="images/Luna/Lunaboy2.jpg" alt="fluffy-carrier merle">
-                <img src="images/Luna/Luna.jpg" alt="black merle frenchie">
-                <img src="images/Luna/slimshady.jpg" alt="lilac platinum fluffy Carrier">
+                <img src="images/puppies/merle/blue1.jpg" alt="fluffy-carrier merle">
+                <img src="images/puppies/merle/fawn1.jpg" alt="fluffy-carrier merle">
+                <img src="images/puppies/merle/merles.jpg" alt="fluffy-carrier merle">
+                <img src="images/puppies/merle/merles2.jpg" alt="merle fluffy Carrier">
             </div>
-        </section> -->
+        </section>
 
         <!-- </section>
         <section class=" bg-light py-2">
