update pics chocolates

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
     </section>
     <section class="features  bg-light py-3">
         <div class="container p-5">
-            <h1 class="xl">CHOCOLATES!</h1>
-            <p class="lead"> Chocolate puppies are here.
+            <h1 class="xl">EVERYBODY LOVES CHOCOLATE!</h1>
+            <p class="lead"> All are Chocolate females were snapped up in a flash. We have a fully-suited chocolate&tan, a lilac-fawn merle, and a two chocolate merles, all boys, available. They all carry one testable and two cocoa genes. 
             </p>
         </div>
         <div class="container grid">
@@ -85,11 +85,19 @@
             </div>
             <div class="card puppy"><img src="images/zeus.jpeg" alt="blue french bulldog">
             </div>
-            <div class="card puppy"><img src="images/puppies/sum22/zsalitter-1.jpg" alt="dark chocolate french bulldog">
+            <div class="card puppy"><img src="images/puppies/chocolate/choco1.jpg" alt="dark chocolate french bulldog">
             </div>
-            <div class="card puppy"><img src="images/puppies/sum22/zsalitter-2.jpg" alt="dark chocolate french bulldog">
+            <div class="card puppy"><img src="images/puppies/chocolate/choco2.jpg" alt="dark chocolate french bulldog">
             </div>
-            <div class="card puppy"><img src="images/puppies/sum22/zsalitter-3.jpg" alt="dark chocolate french bulldog">
+            <div class="card puppy"><img src="images/puppies/chocolate/choco3.jpg" alt="dark chocolate french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/puppies/chocolate/choco4.jpg" alt="dark chocolate french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/puppies/chocolate/choco5.jpg" alt="dark chocolate french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/puppies/chocolate/choco6.jpg" alt="dark chocolate french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/puppies/chocolate/choco7.jpg" alt="dark chocolate french bulldog">
             </div>
         </div>
         
