Edit meta and title tags

--- a/about.html
+++ b/about.html
@@ -10,7 +10,9 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>La Bear Frenchies</title>
+    <title>La Bear Frenchies | About Us</title>
+    <meta name="keywords" content="French Bulldog Breeders">
+    <meta name="description" content="A little about us as French Bulldog Breeders">
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-2TG5FJKHNB"></script>
