--- a/puppies.html
+++ b/puppies.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/style.css">
     <title>LaBear | French Bulldogs Puppies</title>
-    <meta name="keywords" content="French Bulldog Puppies Available Now">
+    <meta name="keywords" content="Exotic French Bulldog Puppies Available Now">
     <meta name="description"
-        content="Our newest litters of French Bulldog Puppies. Lilac Blue Sable Fawn Merle. We deliver all over USA">
+        content="Check out our available French Bulldog Puppies. We deliver all over the U.S.">
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-2TG5FJKHNB"></script>
@@ -47,7 +47,8 @@
         <section class="features  bg-primary py-3">
             <div class="container p-5">
                 <h1 class="xl">Puppies Available NOW:</h1>
-                <p class="lead"> Oct 18th: We have only 1 girl available from Madison's litter, and boys and girls available from Aurora's litter. Text us for updated info and pictures.</p>
+                <p class="lead"> Oct 18th: We have only 1 girl available from Madison's litter, and boys and girls
+                    available from Aurora's litter. Text us for updated info and pictures.</p>
             </div>
             <div class="container grid">
                 <div class="card puppy"><img src="images/puppies/sum22/blue.jpg" alt="blue french bulldog">
@@ -78,7 +79,7 @@
                 </div>
                 <!-- <div class="card puppy"><img src="images/Stud/Jerbear-1.jpg" alt="lilac and tan french bulldog stud">
                 </div> -->
-                
+
             </div>
         </section>
         <!-- second puppy section -->
@@ -86,7 +87,8 @@
             <div class="container grid">
                 <div class="text-center">
                     <h2 class="lg">Two Merle Boys Available! </h2>
-                    <p class="lead my-1">One boy is a blue merle and one is a fawn merle. Both boys carry cream and a fluffy gene. They are super sweet and we are motivated to find them a forever home.</p>
+                    <p class="lead my-1">One boy is a blue merle and one is a fawn merle. Both boys carry cream and a
+                        fluffy gene. They are super sweet and we are motivated to find them a forever home.</p>
                 </div>
                 <img src="images/puppies/merle/blue1.jpg" alt="fluffy-carrier merle">
                 <img src="images/puppies/merle/fawn1.jpg" alt="fluffy-carrier merle">
