--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>LaBear | About Us</title>
+    <title>La Bear Frenchies | Happy, Healthy French Bulldog Puppies</title>
     <meta name="keywords" content="French Bulldog Puppies">
-    <meta name="description" content="Home-raised exotic French Bulldog Puppies hand delivered to you">
+    <meta name="description" content="Happy & healthy French Bulldogs raised in our home, delivered to yours">
 </head>
 
 <!-- Google tag (gtag.js) -->
