Update text and formatting

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </section>
 
     <!-- SHOWCASE  -->
-    <section class="showcase">
+    <section class="showcase" id="indexintro">
         <div class="container grid">
             <div class="showcase-text">
                 <h1>We're Frenchie Fanatics, Y'all!</h1>
@@ -74,10 +74,12 @@
             </div>
         </div>
     </section>
+
+    <!-- features -->
     <section class="features  bg-light py-3">
         <div class="container p-5">
             <h1 class="xl">EVERYBODY LOVES CHOCOLATE!</h1>
-            <p class="lead"> All are Chocolate females were snapped up in a flash. We have a fully-suited chocolate&tan, a lilac-fawn merle, and a two chocolate merles, all boys, available. They all carry one testable and two cocoa genes. 
+            <p class="lead"> All our Chocolate females were snapped up in a flash. We have a fully-suited chocolate&tan, a lilac-fawn merle, and a two chocolate merles, all boys, available. They all carry one testable and two cocoa genes. 
             </p>
         </div>
         <div class="container grid">
