--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
         <section class="docs-head bg-primary py-3">
             <div class="container grid">
                 <div>
-                    <h1 class="xl">About La Bear Frenchies</h1>
+                    <h1 class="xl">Happy Frenchies Make The Best Frenchies!</h1>
                     <p class="lead">The health and well-being of our dogs is our number one priority.</p>
                 </div>
 
@@ -59,7 +59,6 @@
         <section class="showcase">
             <div class="container grid">
                 <div class="showcase-text">
-                    <h1>Happy Frenchies Make The Best Frenchies!</h1>
                     <p>We are home-based breeders of beautiful, happy, and healthy French Bulldogs. We aim to breed good
                         natured French Bulldogs with great structure and type. Our Frenchie pups come in a variety of
                         colors such as
@@ -73,7 +72,7 @@
                     </p>
                 </div>
 
-                <div class="showcase-form card">
+                <div class="card">
                     <img src="images/pool.JPG" alt="">
 
                 </div>
@@ -86,7 +85,7 @@
                 <p class="lead">
                 </p>
             </div>
-            <div class="container grid">
+            <div class="featurette container grid">
                 <div class="card puppy">
                     <div style="width:100%;height:0;padding-bottom:99%;position:relative;"><iframe
                             src="https://giphy.com/embed/NRwJ17ZqEuY5Sq7XoF" width="100%" height="100%"
