--- a/about.html
+++ b/about.html
@@ -62,12 +62,11 @@
                     <p>We are home-based breeders of beautiful, happy, and healthy French Bulldogs. We aim to breed good
                         natured French Bulldogs with great structure and type. Our Frenchie pups come in a variety of
                         colors such as
-                        blue, chocolate, lilac, in some with a long coat (fluffy). Located in Dallas,TX, we hand-deliver
-                        our puppies across the U.S.A. All of our French Bulldogs are health-tested and have amazing
-                        temperaments. Our puppies
-                        are raised loving family environment (right in our living room), with plenty of interaction and
+                        blue, chocolate, lilac, and soon with a longer coat (fluffy). Located in Dallas,TX, we hand-deliver
+                        our puppies across the U.S. Our puppies
+                        are raised in a loving family environment (right in our living room), with plenty of interaction and
                         socialising from day 1 so
-                        they are ‘home ready’ for their forever families. We are located on acreage just South of
+                        they are ‘home ready’ for their forever families. We are located on acreage just south of
                         Dallas, where our Frenchies have ample room to run around and play.
                     </p>
                 </div>
