Edit chocolate description

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-2TG5FJKHNB"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-2TG5FJKHNB');
+    gtag('config', 'G-2TG5FJKHNB');
 </script>
 
 <body>
@@ -79,7 +79,9 @@
     <section class="features  bg-light py-3">
         <div class="container p-5">
             <h1 class="xl">EVERYBODY LOVES CHOCOLATE!</h1>
-            <p class="lead"> All our Chocolate females were snapped up in a flash. We have a fully-suited chocolate&tan, a lilac-fawn merle, and a two chocolate merles, all boys, available. They all carry one testable and two cocoa genes. 
+            <p class="lead"> All our chocolate female puppies were snapped up in a flash. We have a fully-suited chocolate & tan,
+                a lilac-fawn merle, and two chocolate merles, all available as of Oct 19th. They all carry one testable and two
+                coco genes.
             </p>
         </div>
         <div class="container grid">
@@ -102,7 +104,7 @@
             <div class="card puppy"><img src="images/puppies/chocolate/choco7.jpg" alt="dark chocolate french bulldog">
             </div>
         </div>
-        
+
         </div>
 
     </section>
