Edit about us description

--- a/about.html
+++ b/about.html
@@ -59,15 +59,14 @@
         <section class="showcase">
             <div class="container grid">
                 <div class="showcase-text">
-                    <p>We are home-based breeders of beautiful, happy, and healthy French Bulldogs. We aim to breed good
-                        natured French Bulldogs with great structure and type. Our Frenchie pups come in a variety of
-                        colors such as
-                        blue, chocolate, lilac, and soon with a longer coat (fluffy). Located in Dallas,TX, we hand-deliver
-                        our puppies across the U.S. Our puppies
-                        are raised in a loving family environment (right in our living room), with plenty of interaction and
-                        socialising from day 1 so
+                    <p>We are home-based breeders of beautiful, happy, and healthy French Bulldogs. We aim to breed good-natured French Bulldogs with great structure and type. Our Frenchie pups come in a variety of
+                        colors:
+                        blue, chocolate, lilac, and soon with a longer coat (fluffy). We are located in Dallas, TX, and we hand-deliver
+                        our puppies across the U.S. La Bear Frenchies are living in over 20 states and counting. Our puppies
+                        are raised in a loving family environment (right in our living room), with tons of interaction and
+                        socialization from day 1 so
                         they are ‘home ready’ for their forever families. We are located on acreage just south of
-                        Dallas, where our Frenchies have ample room to run around and play.
+                        Dallas, where all our Frenchies have ample room to run around and play.
                     </p>
                 </div>
 
