Edit about description text again

--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
                 <div class="showcase-text">
                     <p>We are home-based breeders of beautiful, happy, and healthy French Bulldogs. We aim to breed good-natured French Bulldogs with great structure and type. Our Frenchie pups come in a variety of
                         colors:
-                        blue, chocolate, lilac, and soon with a longer coat (fluffy). We are located in Dallas, TX, and we hand-deliver
+                        blue, chocolate, lilac, and soon with a longer coat (fluffy). All of our puppies come with a health guarantee for their first year of life. We are located in Dallas, TX, and we hand-deliver
                         our puppies across the U.S. La Bear Frenchies are living in over 20 states and counting. Our puppies
                         are raised in a loving family environment (right in our living room), with tons of interaction and
                         socialization from day 1 so
