Fix navbar to top of view

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
 <body>
     <!-- NAVBAR -->
+    <header>
     <div class="navbar">
         <!-- logo and nav buttons, but wrapped in a container to refine spatial control of edges on larger screens -->
         <div class="container flex">
@@ -45,6 +46,7 @@
 
     </div>
     <h2 class="contact">email: LaBearFrenchies<i class="fas fa-at"></i>gmail.com | text: 214.861.7611</br></h2>
+</header>
     <!-- SHOWTIME -->
     <section class="showtime">
         <div class="video-container">
