--- a/puppies.html
+++ b/puppies.html
@@ -27,6 +27,7 @@
 
 <body>
     <!-- NAVBAR -->
+    <header>
     <div class="navbar">
         <!-- logo and nav buttons, but wrapped in a container to refine spatial control of edges on larger screens -->
         <div class="container flex">
@@ -43,6 +44,7 @@
         </div>
     </div>
     <h2 class="contact">email: LaBearFrenchies<i class="fas fa-at"></i>gmail.com | text: 214.861.7611</h3>
+    </header>
         <!-- Head -->
         <section class="features  bg-primary py-3">
             <div class="container p-5">
