--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
 
 <body>
     <!-- NAVBAR -->
+    <header>
     <div class="navbar">
         <!-- logo and nav buttons, but wrapped in a container to refine spatial control of edges on larger screens -->
         <div class="container flex">
@@ -44,7 +45,7 @@
 
     </div>
     <h2 class="contact">email: LaBearFrenchies<i class="fas fa-at"></i>gmail.com | text: 214.861.7611</h3>
-
+    </header>
         <!-- Head -->
         <section class="docs-head bg-primary py-3">
             <div class="container grid">
