Adjust navbar sticky props

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
     <!-- SHOWTIME -->
     <section class="showtime">
         <div class="video-container">
-            <video src="images/laBearBackgroundLoop2.mp4" autoplay muted loop></video>
+            <video src="images/laBearBackgroundLoop10.19.mp4" autoplay muted loop></video>
         </div>
         <div class="showtime-text text-center my-3">
-            <h1 class="lg">FRENCH </br>BULLDOG </br>PUPPIES!</h1>
-            <a href="puppies.html" class="btn btn-outline my-1">Show Me Puppies!!!</a>
+            <h1 class="lg">Happy & Healthy </br>FRENCH BULLDOGS </br> Puppies</h1>
+            <a href="puppies.html" class="btn btn-outline my-1">See Our Pups</a>
         </div>
     </section>
 
