--- a/stud.html
+++ b/stud.html
@@ -46,7 +46,7 @@
     <h2 class="contact">email: LaBearFrenchies<i class="fas fa-at"></i>gmail.com | text: 214.861.7611</h3>
     </header>
         <!-- Head -->
-        <section class=" bg-primary py-3">
+        <section class="bg-primary py-3" id="romeo">
             <div class="container grid">
                 <div>
                     <h1 class="xl">La Bear's Chocolate Shop</h1>
