--- a/stud.html
+++ b/stud.html
@@ -130,7 +130,7 @@
                     <h3>now open for breeding</h3>
                     <img src="images/Stud/ferrero-5.jpg" alt="chocolate fluffy french bulldog">
                     <img src="images/Stud/Ferrero-3.jpg" alt="chocolate fluffy french bulldog">
-                    <img src="images/Stud/Ferr-3.jpg" alt="chocolate fluffy french bulldog">
+                    <img src="images/Stud/ferr-3.jpg" alt="chocolate fluffy french bulldog">
 
                 </div>
             </div>
@@ -160,7 +160,7 @@
 
                 <div class="card">
                     <h2>Jer Beau Bear</h2>
-                    <img src="images/Stud/Jerbear-4.jpg" alt="lilac and tan french bulldog">
+                    <img src="images/Stud/jerbear-4.jpg" alt="lilac and tan french bulldog">
                     <img src="images/Stud/Jerbear-1.jpg" alt="lilac and tan french bulldog">
                     <img src="images/Stud/Jerbear-2.jpg" alt="lilac and tan french bulldog">
 
