--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <video src="images/laBearBackgroundLoop10.19.mp4" autoplay muted loop></video>
         </div>
         <div class="showtime-text text-center my-3">
-            <h1 class="lg">Happy & Healthy </br>FRENCH BULLDOGS </br> Puppies</h1>
+            <h1 class="lg">Happy & Healthy </br>FRENCH BULLDOG </br> Puppies</h1>
             <a href="puppies.html" class="btn btn-outline my-1">See Our Pups</a>
         </div>
     </section>
