Delete old pics

--- a/puppies.html
+++ b/puppies.html
@@ -49,8 +49,7 @@
         <section class="features  bg-primary py-3">
             <div class="container p-5">
                 <h1 class="xl">Puppies Available NOW:</h1>
-                <p class="lead"> Oct 18th: We have only 1 girl available from Madison's litter, and boys and girls
-                    available from Aurora's litter. Text us for updated info and pictures.</p>
+                <p class="lead"> Nov 1st: We have 3 girls and 3 Boys available from Aurora's litter. Text us for updated info and pictures.</p>
             </div>
             <div class="container grid">
                 <div class="card puppy"><img src="images/puppies/sum22/blue.jpg" alt="blue french bulldog">
@@ -65,17 +64,10 @@
                     <h1>blue girl 2
                     </h1>
                 </div>
-                <div class="card puppy"><img src="images/mamas/madison-2.jpg" alt="blue pied french bulldog">
+                <div class="card puppy"><img src="images/mamas/aurora.jpg" alt="blue fawn french bulldog">
                     <h1>Momma</h1>
                 </div>
-                <!-- <div class="card puppy"><img src="images/mamas/aurora.jpg" alt="blue fawn french bulldog">
-                </div> -->
-                <!-- <div class="card puppy"><img src="images/puppies/sum22/aurlitter.jpg" alt="litter of french bulldogs">
-                </div>
-                <div class="card puppy"><img src="images/puppies/sum22/aurlitter1.jpg" alt="litter of french bulldogs">
-                </div> -->
-                <!-- <div class="card puppy"><img src="images/mamas/madison1.jpg" alt="blue pied french bulldog">
-                </div> -->
+
                 <div class="card puppy"><img src="images/Jerbear-3.jpg" alt="lilac and tan french bulldog stud">
                     <h1>Daddy</h1>
                 </div>
@@ -88,12 +80,11 @@
         <section class="cloud bg-primary py-2">
             <div class="container grid">
                 <div class="text-center">
-                    <h2 class="lg">Two Merle Boys Available! </h2>
-                    <p class="lead my-1">One boy is a blue merle and one is a fawn merle. Both boys carry cream and a
-                        fluffy gene. They are super sweet and we are motivated to find them a forever home.</p>
+                    <h2 class="lg">One Merle Flully Carrier Boy Available! </h2>
+                    <p class="lead my-1">The blue merle is still available, carries cream and a
+                        fluffy gene. His coat is super soft due to his fluffy gene, and he is so sweet. We are motivated to find them a forever home.</p>
                 </div>
                 <img src="images/puppies/merle/blue1.jpg" alt="fluffy-carrier merle">
-                <img src="images/puppies/merle/fawn1.jpg" alt="fluffy-carrier merle">
                 <img src="images/puppies/merle/merles.jpg" alt="fluffy-carrier merle">
                 <img src="images/puppies/merle/merles2.jpg" alt="merle fluffy Carrier">
             </div>
